; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/power/extr_ds2782_battery.c_ds2782_get_status.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/power/extr_ds2782_battery.c_ds2782_get_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ds2782_info = type { i32 }

@POWER_SUPPLY_STATUS_FULL = common dso_local global i32 0, align 4
@POWER_SUPPLY_STATUS_NOT_CHARGING = common dso_local global i32 0, align 4
@POWER_SUPPLY_STATUS_DISCHARGING = common dso_local global i32 0, align 4
@POWER_SUPPLY_STATUS_CHARGING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ds2782_info*, i32*)* @ds2782_get_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ds2782_get_status(%struct.ds2782_info* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ds2782_info*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.ds2782_info* %0, %struct.ds2782_info** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load %struct.ds2782_info*, %struct.ds2782_info** %4, align 8
  %10 = call i32 @ds2782_get_current(%struct.ds2782_info* %9, i32* %7)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  store i32 %14, i32* %3, align 4
  br label %46

15:                                               ; preds = %2
  %16 = load %struct.ds2782_info*, %struct.ds2782_info** %4, align 8
  %17 = call i32 @ds2782_get_capacity(%struct.ds2782_info* %16, i32* %8)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %15
  %21 = load i32, i32* %6, align 4
  store i32 %21, i32* %3, align 4
  br label %46

22:                                               ; preds = %15
  %23 = load i32, i32* %8, align 4
  %24 = icmp eq i32 %23, 100
  br i1 %24, label %25, label %28

25:                                               ; preds = %22
  %26 = load i32, i32* @POWER_SUPPLY_STATUS_FULL, align 4
  %27 = load i32*, i32** %5, align 8
  store i32 %26, i32* %27, align 4
  br label %45

28:                                               ; preds = %22
  %29 = load i32, i32* %7, align 4
  %30 = icmp eq i32 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %28
  %32 = load i32, i32* @POWER_SUPPLY_STATUS_NOT_CHARGING, align 4
  %33 = load i32*, i32** %5, align 8
  store i32 %32, i32* %33, align 4
  br label %44

34:                                               ; preds = %28
  %35 = load i32, i32* %7, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %37, label %40

37:                                               ; preds = %34
  %38 = load i32, i32* @POWER_SUPPLY_STATUS_DISCHARGING, align 4
  %39 = load i32*, i32** %5, align 8
  store i32 %38, i32* %39, align 4
  br label %43

40:                                               ; preds = %34
  %41 = load i32, i32* @POWER_SUPPLY_STATUS_CHARGING, align 4
  %42 = load i32*, i32** %5, align 8
  store i32 %41, i32* %42, align 4
  br label %43

43:                                               ; preds = %40, %37
  br label %44

44:                                               ; preds = %43, %31
  br label %45

45:                                               ; preds = %44, %25
  store i32 0, i32* %3, align 4
  br label %46

46:                                               ; preds = %45, %20, %13
  %47 = load i32, i32* %3, align 4
  ret i32 %47
}

declare dso_local i32 @ds2782_get_current(%struct.ds2782_info*, i32*) #1

declare dso_local i32 @ds2782_get_capacity(%struct.ds2782_info*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
